tests/derive_compile_fail/non_scan.stderr
error[E0277]: the trait bound `NotScan: shredder::Scan` is not satisfied
 --> $DIR/non_scan.rs:7:10
  |
7 | #[derive(Scan)]
  |          ^^^^ the trait `shredder::Scan` is not implemented for `NotScan`
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotScan: shredder::marker::GcDrop` is not satisfied
  --> $DIR/non_scan.rs:7:10
   |
7  | #[derive(Scan)]
   |          ^^^^ the trait `shredder::marker::GcDrop` is not implemented for `NotScan`
   |
  ::: $WORKSPACE/src/plumbing.rs
   |
   | pub fn check_gc_drop<T: GcDrop>(_: &T) {}
   |                         ------ required by this bound in `shredder::plumbing::check_gc_drop`
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
